--- a/MvcKompApp/MvcKompApp.csproj
+++ b/MvcKompApp/MvcKompApp.csproj
@@ -82,6 +82,7 @@
   <ItemGroup>
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CourseController.cs" />
+    <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\DepartmentController.cs" />
     <Compile Include="Controllers\EmpAsyncController.cs" />
     <Compile Include="Controllers\EmployeeController.cs" />
@@ -89,6 +90,7 @@
     <Compile Include="Controllers\InstructorController.cs" />
     <Compile Include="Controllers\StudentController.cs" />
     <Compile Include="Controllers\TaskController.cs" />
+    <Compile Include="Controllers\VisitorSiteController.cs" />
     <Compile Include="DAL\CourseRepository.cs" />
     <Compile Include="DAL\GenericRepository.cs" />
     <Compile Include="DAL\IStudentRepository.cs" />
@@ -96,6 +98,8 @@
     <Compile Include="DAL\SchoolInitializer.cs" />
     <Compile Include="DAL\StudentRepository.cs" />
     <Compile Include="DAL\UnitOfWork.cs" />
+    <Compile Include="DAL\VisitorSiteInMemoryDB.cs" />
+    <Compile Include="Infrastructure\AjaxOnly.cs" />
     <Compile Include="Infrastructure\KompValidation.cs" />
     <Compile Include="Controllers\NavController.cs" />
     <Compile Include="Global.asax.cs">
@@ -109,6 +113,7 @@
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\Cart.cs" />
     <Compile Include="Models\Course.cs" />
+    <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\Department.cs" />
     <Compile Include="Models\EFProductRepository.cs" />
     <Compile Include="Models\EmployeeWithPaging.cs" />
@@ -120,16 +125,23 @@
     <Compile Include="Models\Person.cs" />
     <Compile Include="Models\Student.cs" />
     <Compile Include="Models\TaskItem.cs" />
+    <Compile Include="Models\VisitorSiteModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\AssignedCourseData.cs" />
     <Compile Include="ViewModels\EnrollmentDateGroup.cs" />
     <Compile Include="ViewModels\InstructorIndexData.cs" />
+    <Compile Include="ViewModels\ListCustmersViewModel.cs" />
+    <Compile Include="WorkerServices\Abstraction\ICustomerWorkerServices.cs" />
+    <Compile Include="WorkerServices\Abstraction\IVisitorSiteService.cs" />
+    <Compile Include="WorkerServices\Customer\CustomerWorkerServices.cs" />
+    <Compile Include="WorkerServices\Visitor\VisitorSiteService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\School.sdf" />
     <Content Include="App_Data\TaskDb.sdf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\Custom.css" />
     <Content Include="Content\jquery.autocomplete.css" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
@@ -186,6 +198,7 @@
     <Content Include="Content\themes\base\minified\jquery.ui.tabs.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
     <Content Include="Global.asax" />
+    <Content Include="Images\loading.gif" />
     <Content Include="README.jQuery.vsdoc.txt" />
     <None Include="Scripts\jquery-1.8.0.intellisense.js" />
     <Content Include="Scripts\jquery-1.8.0.js" />
@@ -263,6 +276,10 @@
     <Content Include="Views\Student\Details.cshtml" />
     <Content Include="Views\Student\Edit.cshtml" />
     <Content Include="Views\Student\Index.cshtml" />
+    <Content Include="Views\VisitorSite\Index.cshtml" />
+    <Content Include="Views\Customer\Index.cshtml" />
+    <Content Include="Views\Shared\_customerEdit.cshtml" />
+    <Content Include="Views\Customer\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
