--- a/MvcKompApp/Web.config
+++ b/MvcKompApp/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=152368
@@ -96,4 +96,21 @@
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
+  <system.serviceModel>
+    <behaviors>
+      <endpointBehaviors>
+        <behavior name="MvcKompApp.Services.DataServiceAspNetAjaxBehavior">
+          <enableWebScript />
+        </behavior>
+      </endpointBehaviors>
+    </behaviors>
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="true"
+      multipleSiteBindingsEnabled="true" />
+    <services>
+      <service name="MvcKompApp.Services.DataService">
+        <endpoint address="" behaviorConfiguration="MvcKompApp.Services.DataServiceAspNetAjaxBehavior"
+          binding="webHttpBinding" contract="MvcKompApp.Services.DataService" />
+      </service>
+    </services>
+  </system.serviceModel>
 </configuration>
