Added Image file uploader

--- a/MvcKompApp/Web.config
+++ b/MvcKompApp/Web.config
@@ -12,6 +12,7 @@
     <add name="NorthwindEntities" connectionString="metadata=res://*/NorthWindModel.csdl|res://*/NorthWindModel.ssdl|res://*/NorthWindModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MAC-PC\SQLEXPRESS;initial catalog=Northwind;integrated security=True;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="TaskDBContext" connectionString="Data Source=|DataDirectory|TaskDb.sdf" providerName="System.Data.SqlServerCe.4.0" />
     <add name="SchoolContext" connectionString="Data Source=|DataDirectory|School.sdf" providerName="System.Data.SqlServerCe.4.0" />
+    <add name="ImageContext" connectionString="Data Source=|DataDirectory|ImageDb.sdf" providerName="System.Data.SqlServerCe.4.0" />
     <!--<add name="ApplicationServices"
          connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true"
          providerName="System.Data.SqlClient" />-->
