--- a/MvcKompApp/MvcKompApp.csproj
+++ b/MvcKompApp/MvcKompApp.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Controllers\EmpAsyncController.cs" />
     <Compile Include="Controllers\EmployeeController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ImageController.cs" />
     <Compile Include="Controllers\InstructorController.cs" />
     <Compile Include="Controllers\PersonController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
@@ -100,6 +101,7 @@
     <Compile Include="Controllers\VisitorSiteController.cs" />
     <Compile Include="DAL\CourseRepository.cs" />
     <Compile Include="DAL\GenericRepository.cs" />
+    <Compile Include="DAL\ImageContext.cs" />
     <Compile Include="DAL\InMemoryUserDB.cs" />
     <Compile Include="DAL\IStudentRepository.cs" />
     <Compile Include="DAL\IUserDB.cs" />
@@ -134,6 +136,7 @@
     <Compile Include="Models\EFProductRepository.cs" />
     <Compile Include="Models\EmployeeWithPaging.cs" />
     <Compile Include="Models\Enrollment.cs" />
+    <Compile Include="Models\ImageModel.cs" />
     <Compile Include="Models\Instructor.cs" />
     <Compile Include="Models\IProductRepository.cs" />
     <Compile Include="Models\MaxWordsValidationAttribute.cs" />
@@ -164,6 +167,9 @@
     <Compile Include="WorkerServices\Visitor\VisitorSiteService.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\ImageDb.sdf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="App_Data\School.sdf" />
     <Content Include="App_Data\TaskDb.sdf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -330,8 +336,15 @@
     <Content Include="Views\UserModel\Edit.cshtml" />
     <Content Include="Views\UserModel\Create.cshtml" />
     <Content Include="Views\UserModel\Delete.cshtml" />
+    <Content Include="Views\Image\Index.cshtml" />
+    <Content Include="Views\Image\Details.cshtml" />
+    <Content Include="Views\Image\Edit.cshtml" />
+    <Content Include="Views\Image\DeleteConfirmed.cshtml" />
+    <Content Include="Views\Image\Create.cshtml" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="uploads\" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
   </ItemGroup>
