--- a/MvcKompApp/Web.config
+++ b/MvcKompApp/Web.config
@@ -14,7 +14,10 @@
     <add name="SchoolContext" connectionString="Data Source=|DataDirectory|School.sdf" providerName="System.Data.SqlServerCe.4.0" />
     <add name="ImageContext" connectionString="Data Source=|DataDirectory|ImageDb.sdf" providerName="System.Data.SqlServerCe.4.0" />
     <!--<add name="MovieContext" connectionString="Data Source=|DataDirectory|MovieDb.sdf" providerName="System.Data.SqlServerCe.4.0" />-->
-    
+
+    <add name="ApplicationServices"
+        connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=Tek360WebSite;Data Source=.\SqlExpress"
+        providerName="System.Data.SqlClient" />
     
     <!--<add name="ApplicationServices"
          connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true"
@@ -51,6 +54,18 @@
         </credentials>
       </forms>
     </authentication>
+    <membership>
+      <providers>
+        <clear />
+        <add name="AspNetSqlMembershipProvider"
+        type="System.Web.Security.SqlMembershipProvider"
+        connectionStringName="ApplicationServices" enablePasswordRetrieval="false"
+        enablePasswordReset="false" requiresQuestionAndAnswer="false"
+        requiresUniqueEmail="false" maxInvalidPasswordAttempts="5"
+        minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0"
+        passwordAttemptWindow="10" applicationName="/" />
+      </providers>
+    </membership>
     <!--<membership>
       <providers>
         <clear/>
