--- a/JQueryPro/JQueryPro.csproj
+++ b/JQueryPro/JQueryPro.csproj
@@ -175,6 +175,13 @@
     <Content Include="Global.asax" />
     <Content Include="AjaxCallGlobalEvents.html" />
     <Content Include="Accordian.html" />
+    <Content Include="Scripts\MyScripts\CallApply.js" />
+    <Content Include="Scripts\MyScripts\DynamicProperty.js" />
+    <Content Include="Scripts\MyScripts\MyScript.js" />
+    <Content Include="Scripts\MyScripts\PersonClass.js" />
+    <Content Include="Scripts\MyScripts\prototype.js" />
+    <Content Include="Scripts\MyScripts\thisThat.js" />
+    <Content Include="Scripts\MyScripts\underscore.js" />
     <Content Include="Tabs.html" />
     <Content Include="mydata.json" />
     <None Include="Scripts\jquery-1.7.1.intellisense.js" />
