--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,6 +2,7 @@
 <repositories>
   <repository path="..\JQueryPro\packages.config" />
   <repository path="..\KnockoutJS\packages.config" />
+  <repository path="..\MediaService\MediaService\packages.config" />
   <repository path="..\MvcKomp3\packages.config" />
   <repository path="..\MvcKompApp.Tests\packages.config" />
   <repository path="..\MvcKompApp\packages.config" />
