--- a/MediaService/MediaService/MediaService.csproj
+++ b/MediaService/MediaService/MediaService.csproj
@@ -82,6 +82,8 @@
   <ItemGroup>
     <Compile Include="APIKeyAuthorization.cs" />
     <Compile Include="APIKeyRepository.cs" />
+    <Compile Include="DAL\PhotoAlbumDatabaseInitializer.cs" />
+    <Compile Include="DAL\PhotoContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
