--- a/MediaService/MediaService/MediaService.csproj
+++ b/MediaService/MediaService/MediaService.csproj
@@ -82,8 +82,13 @@
   <ItemGroup>
     <Compile Include="APIKeyAuthorization.cs" />
     <Compile Include="APIKeyRepository.cs" />
+    <Compile Include="DAL\NetworkCredential.cs" />
     <Compile Include="DAL\PhotoAlbumDatabaseInitializer.cs" />
     <Compile Include="DAL\PhotoContext.cs" />
+    <Compile Include="Global.asax.cs">
+      <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="ImageResizer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -99,6 +104,7 @@
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Global.asax" />
     <Content Include="Service\MediaService.svc" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
