--- a/KnockoutJS/KnockoutJS.csproj
+++ b/KnockoutJS/KnockoutJS.csproj
@@ -226,6 +226,10 @@
     <Content Include="Content\themes\base\minified\jquery.ui.slider.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.tabs.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
+    <Content Include="GiftModel.htm" />
+    <Content Include="PlanetModel.htm" />
+    <Content Include="ContactsModel.htm" />
+    <Content Include="CartLine.htm" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <None Include="Scripts\jquery-1.7.1.intellisense.js" />
