--- a/MvcKomp3/Web.config
+++ b/MvcKomp3/Web.config
@@ -72,6 +72,7 @@
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
+    <modules runAllManagedModulesForAllRequests="true" />
   </system.webServer>
   <runtime>
     
