--- a/WebApiDemo/WebApiDemo/Web.config
+++ b/WebApiDemo/WebApiDemo/Web.config
@@ -7,11 +7,14 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="WebApiDemo.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-WebApiDemo-20120612091934;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-WebApiDemo-20120612091934.mdf"
       providerName="System.Data.SqlClient" />
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-WebApi-20130116230436;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-WebApi-20130116230436.mdf" />
+    <!--<add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-WebApi-20130116230436;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-WebApi-20130116230436.mdf" />-->
     <!--<add name="PlaybookContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=PlaybookContext-20120612110222; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|PlaybookContext-20120612110222.mdf"
       providerName="System.Data.SqlClient" />-->
   
@@ -89,4 +92,25 @@
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
+  <applicationSettings>
+    <WebApiDemo.Properties.Settings>
+      <setting name="ApiKey" serializeAs="Xml">
+        <value>
+          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+            xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+            <string>bda11d91-7ade-4da1-855d-24adfe39d174</string>
+            <string>460ad6f3-8216-469f-9b1c-52cffa5d812c</string>
+            <string>3ace31a2-1482-4062-91fc-a3d7df4059aa</string>
+            <string>79a2f60d-54e1-4fcd-b087-0916f1c524fc</string>
+            <string>293340c9-650e-4dd7-9e6e-8bda5cf4a23b</string>
+            <string>1e1db4ce-373b-4dac-9756-7b3d864fe9c9</string>
+            <string>26e94273-d9c5-43f0-a6ca-036048251040</string>
+            <string>2194fc4e-efc5-4c87-b571-bbd02dd54e6c</string>
+            <string>c87f678a-eb28-4880-93bb-63214212c354</string>
+            <string>918704ec-4811-45b6-a169-16bae3df69a8</string>
+          </ArrayOfString>
+        </value>
+      </setting>
+    </WebApiDemo.Properties.Settings>
+  </applicationSettings>
 </configuration>
