--- a/MediaService/MediaService/Web.config
+++ b/MediaService/MediaService/Web.config
@@ -56,12 +56,10 @@
     </system.serviceModel>
     <applicationSettings>
       <MediaService.Properties.Settings>
-        <setting name="Folder" serializeAs="String">
-          <value>F:\Media\Immagini\Bugghina</value>
-        </setting>
         <setting name="ApiKey" serializeAs="Xml">
           <value>
-            <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+            <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+              xmlns:xsd="http://www.w3.org/2001/XMLSchema">
               <string>bda11d91-7ade-4da1-855d-24adfe39d174</string>
               <string>460ad6f3-8216-469f-9b1c-52cffa5d812c</string>
               <string>3ace31a2-1482-4062-91fc-a3d7df4059aa</string>
@@ -74,6 +72,9 @@
               <string>918704ec-4811-45b6-a169-16bae3df69a8</string>
             </ArrayOfString>
           </value>
+        </setting>
+        <setting name="Folder" serializeAs="String">
+          <value>F:\Media\Immagini\Bugghina</value>
         </setting>
       </MediaService.Properties.Settings>
     </applicationSettings>
