--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -11,5 +11,6 @@
   <repository path="..\MvcMusicStore\packages.config" />
   <repository path="..\oDataService\packages.config" />
   <repository path="..\PagingAjax\packages.config" />
+  <repository path="..\ServiceWebApi\packages.config" />
   <repository path="..\WebApi\packages.config" />
 </repositories>
