--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -9,8 +9,11 @@
   <repository path="..\MvcKompMvc4\packages.config" />
   <repository path="..\MvcKompTest\packages.config" />
   <repository path="..\MvcMusicStore\packages.config" />
+  <repository path="..\MvcNotes\MvcNotes\packages.config" />
   <repository path="..\oDataService\packages.config" />
   <repository path="..\PagingAjax\packages.config" />
   <repository path="..\ServiceWebApi\packages.config" />
   <repository path="..\WebApi\packages.config" />
+  <repository path="..\WebApiDemo\WebApiDemo.Tests\packages.config" />
+  <repository path="..\WebApiDemo\WebApiDemo\packages.config" />
 </repositories>
